modification dans config